--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <!--<script src="js/controllers.js"></script>-->
+    <script src="js/controllers.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="views/home/home.controller.js"></script>
     <!--<script src="views/home/home.service.js"></script>
