--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,9 @@
       }
     </script>-->
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -31,7 +28,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/directives.module.js"></script>
+    <script src="js/services.module.js"></script>
+    <script src="js/filters.module.js"></script>
+    <script src="js/controllers.module.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="views/home/home.controller.js"></script>
     <!--<script src="views/home/home.service.js"></script>
