--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/directives.module.js"></script>
-    <script src="js/services.module.js"></script>
     <script src="js/filters.module.js"></script>
     <script src="js/controllers.module.js"></script>
+    <script src="js/services.module.js"></script>
+    <script src="js/localstorage.service.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="views/home/home.controller.js"></script>
     <!--<script src="views/home/home.service.js"></script>
