--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/directives.module.js"></script>
     <script src="js/filters.module.js"></script>
     <script src="js/controllers.module.js"></script>
+    <script src="js/main.controller.js"></script>
     <script src="js/services.module.js"></script>
     <script src="js/localstorage.service.js"></script>
     <script src="views/menu/menu.controller.js"></script>
