--- a/www/index.html
+++ b/www/index.html
@@ -34,10 +34,7 @@
     <script src="js/main.controller.js"></script>
     <script src="js/services.module.js"></script>
     <script src="js/localstorage.service.js"></script>
-    <script src="views/menu/menu.controller.js"></script>
-    <script src="views/home/home.controller.js"></script>
-    <!--<script src="views/home/home.service.js"></script>
-    <script src="views/home/home.directive.js"></script>-->
+    <script src="js/app.bundle.min.js"></script>
   </head>
 
   <body ng-app="starter">
