--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <script src="js/main.controller.js"></script>
     <script src="js/services.module.js"></script>
     <script src="js/localstorage.service.js"></script>
+    <script src="js/company.directive.js"></script>
     <script src="js/app.bundle.min.js"></script>
   </head>
 
