--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
